--- a/client/style.css
+++ b/client/style.css
@@ -86,11 +86,12 @@ h2 {
     background-color: var(--Main-color);
     box-shadow: 0px 7px 0px 0px var(--Outline);
     background-color: var(--Dark-bg);
+    cursor: pointer;
 }
 
 /* Page Container */
 #main_page {
-    display: grid;
+    display: none;
     grid-template-columns: auto 4fr 1fr;
     width: 85%;
     margin: 10vh auto;
