--- a/client/style.css
+++ b/client/style.css
@@ -44,6 +44,7 @@ h2 {
     --px-size-2: clamp(17px, 1.5vw, 34px);
     --padding-1: var(--size-0) var(--size-1);
     --padding-2: var(--size-1) var(--size-2);
+    --padding-3: 5px 10px;
 
     --font-color: #ffffff;
 }
@@ -114,6 +115,7 @@ header {
     grid-column: 1 / 2;
     padding: var(--size-1);
     box-shadow: 0px 13px 0px 5px var(--Outline), 0px -3px 0px 5px var(--Outline), 0px 25px 0px 0px black;
+    min-width: 10em;
     max-width: 13em;
 }
 
@@ -212,6 +214,78 @@ header {
     display: block;
     height: 100%;
 }
+/* #endregion */
+
+/* #region Preferences section */
+#preferences {
+    background-color: var(--Main-color);
+    padding: var(--size-3);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+#preferences h2 {
+    text-align: left;
+    font-size: var(--size-4);
+}
+#preferences .checkbox_container, #preferences .checkbox_container * {
+    cursor: pointer;
+}
+#preferences .checkbox {
+    border: 1px solid black;
+    border-radius: 50px;
+    background-color: #ffffff;
+    height: 1em;
+    width: 1em;
+    display: inline-block;
+}
+#preferences .checked {
+    background-image: url('./images/correct_sign.PNG'); 
+    background-size:cover;
+}
+#preferences .checkbox input { 
+    opacity: 0; 
+    position: absolute;
+}
+#preferences #add_custom_topic_div {
+    display: flex;
+}
+#preferences button {
+    margin-left: var(--size-0);
+    padding: var(--padding-3);
+    border-radius: 5px;
+    font-family: 'Titan One', cursive;
+    font-size: var(--px-size-1);
+    color: var(--font-color);
+    background-color: var(--Main-color);
+    box-shadow: 0px 7px 0px 0px var(--Outline);
+    background-color: var(--Dark-bg);
+    cursor: pointer;
+    text-shadow: 0px 3px 0px rgb(0 0 0), 2px 2px 0px rgb(0 0 0), -2px 3px 0px rgb(0 0 0), -2px -2px 0px rgb(0 0 0), 2px -2px 0px rgb(0 0 0);
+}
+#preferences input {
+    padding: var(--padding-3);
+    font-size: var(--px-size-1);    
+    background-color: var(--Bright-bg);
+    box-shadow: 0px 5px 0px 0px var(--Outline);
+}
+#preferences #start_button {
+    margin-left: auto;
+}
+
+/*
+    padding: var(--padding-2);
+    width: 100%;
+    font-family: 'Titan One', cursive;
+    font-size: var(--px-size-2);
+    border-radius: 8px;
+    text-shadow: 0px 3px 0px rgb(0 0 0), 2px 2px 0px rgb(0 0 0), -2px 3px 0px rgb(0 0 0), -2px -2px 0px rgb(0 0 0), 2px -2px 0px rgb(0 0 0);
+    color: var(--font-color);
+    background-color: var(--Main-color);
+    box-shadow: 0px 7px 0px 0px var(--Outline);
+    background-color: var(--Dark-bg);
+    cursor: pointer;*/
 /* #endregion */
 
 /* #region Validation state */
