--- a/client/style.css
+++ b/client/style.css
@@ -39,7 +39,7 @@ h2 {
     --size-3:  1.5em;
     --size-4:  2.2em;
     --size-5:  3em;
-    --size-6: 12em;
+    --size-6: 11em;
     --px-size-1: clamp(14px, 1vw, 28px);
     --px-size-2: clamp(17px, 1.5vw, 34px);
     --padding-1: var(--size-0) var(--size-1);
@@ -47,6 +47,7 @@ h2 {
     --padding-3: 5px 10px;
 
     --font-color: #ffffff;
+    --dark-color: black;
 }
 /* #endregion */
 
@@ -95,11 +96,12 @@ h2 {
 /* Page Container */
 #main_page {
     display: none;
-    grid-template-columns: auto 4fr 1fr;
+    grid-template-columns: auto 1fr auto;
     width: 85%;
     margin: 10vh auto;
     width: clamp(900px, 80%, 1200px);
     min-height: 500px;
+    position: relative;
 }
 
 /* Header */
@@ -109,14 +111,26 @@ header {
     color: transparent;
 }
 
+/* Main */
+main {
+    margin-left: var(--size-6);
+    box-shadow: 0px -6px 0px 0px var(--Outline), -10px 7px 0px 0px var(--Outline);
+    margin-top: var(--size-4);
+    color: var(--dark-color);
+}
+main h2 {
+    color: var(--font-color);
+}
+
 /* #region Left Sidebar and vertical octagon*/
 #left_sidebar {
     background-color: var(--Main-color);
     grid-column: 1 / 2;
     padding: var(--size-1);
     box-shadow: 0px 13px 0px 5px var(--Outline), 0px -3px 0px 5px var(--Outline), 0px 25px 0px 0px black;
-    min-width: 10em;
-    max-width: 13em;
+    width: 11.5em;
+    position: absolute;
+    height: 100%;
 }
 
 .vertical_octagon {
@@ -131,7 +145,7 @@ header {
     left: 0;
     height: 0;
     border-left: var(--size-1) solid transparent;
-    border-right: var(--size-2) solid var(--color-3);
+    border-right: var(--size-2) solid var(--Main-color);
     width: 100%;
     box-sizing: border-box;
 }
