--- a/client/style.css
+++ b/client/style.css
@@ -96,6 +96,12 @@ h2 {
 }
 /* #endregion */
 
+/* reconnection animation */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}  
+
 /* Page Container */
 #main_page {
     display: none;
